testdata/invalid/invalid_message_double_deprecated.bop
message Test {
    [deprecated("hello")]
    [deprecated("world")]
}